style.css
/* ... */
#introModal {
    max-width: 1000px;
    width: 90%;
}

#introModal .carousel-item img {
    width: 100%;
}

#mapModal {
    text-align: center;
    background-color: white;
    border: 2px solid black;
    margin-bottom: 3%;
    padding: 20px;
}

.modalcenter {
    position: absolute;
    right: 5px;
    top: 0;
}

.blocker {
    z-index: 2;
}

.organization {
    font-size: 2.5rem;
    padding-top: 2%;
    font-weight: bold;
    text-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3),
        0px 8px 13px rgba(0, 0, 0, 0.1),
        0px 18px 23px rgba(0, 0, 0, 0.1);
}

.fa-arrow-down {
    font-size: 2rem;
    margin: 1% 0;
}

.website {
    z-index: 1;
    display: inline-flex;
    margin: 0 10px 5px;
    padding: 5px 10px;
    color: rgb(0, 0, 0);
    background-color: rgb(254, 211, 48);
    font-weight: 700;
    text-decoration: none;
    text-transform: uppercase;
    border-radius: 5px;

}

.website:hover {
    color: rgb(255, 255, 255);
}

/* Nav Bar */
main {
    z-index: 2;
    position: relative;
    height: 100%;
    background-color: rgb(45, 49, 66);
}

.sidebar {
    height: 100%;
    width: 0;
    position: fixed;
    top: 0;
    z-index: 2;
    left: 0;
    background:
        linear-gradient(rgba(255, 228, 155, 0.1),
            rgba(255, 123, 0, 0.7), rgba(0, 0, 60, 0.95)),
        url(images/palmtrees.jpeg);
    font-family: "Open Sans", Tahoma, sans-serif;
    font-weight: 600;
    text-align: justify;
    text-justify: inter-word;
    padding: 0 10px;
    background-color: rgb(68, 97, 129);
    background-size: cover;
    overflow-y: auto;
    padding: 0;
}

.bar {
    display: block;
    height: 5px;
    width: 50px;
    background-color: white;
    margin: 10px auto;
    box-shadow: 2px 3px 8px rgb(92, 117, 145, .5);
}

.button {
    cursor: pointer;
    display: inline-block;
    width: auto;
    margin: 0 auto;
    -webkit-transition: all .7s ease;
    -moz-transition: all .7s ease;
    -ms-transition: all .7s ease;
    -o-transition: all .7s ease;
    transition: all .7s ease;
}

.slide-right {
    animation: slidein 1s forwards;
}

.arrow-slide-right {
    animation: arrowslidein 1s forwards;
}

@keyframes arrowslidein {
    from {
        left: 12px;
    }

    to {
        left: 27%;
    }
}

@keyframes slidein {
    from {
        width: 0px;
    }

    to {
        width: 25%;
    }
}

.nav-left {
    display: block;
    position: absolute;
    right: 50px;
    top: 0;
}

.bar {
    position: relative;
    background-color: #FFF;
    -webkit-transition: all .7s ease;
    -moz-transition: all .7s ease;
    -ms-transition: all .7s ease;
    -o-transition: all .7s ease;
    transition: all .7s ease;
}

.button.active .top,
.button.active .bottom {
    width: 30px;
    left: -5px;
    -webkit-transition: all .7s ease;
    -moz-transition: all .7s ease;
    -ms-transition: all .7s ease;
    -o-transition: all .7s ease;
    transition: all .7s ease;
}

.button.active .top {
    top: 8px;
    -webkit-transform: translateY(15px) rotateZ(45deg);
    -moz-transform: translateY(15px) rotateZ(45deg);
    -ms-transform: translateY(15px) rotateZ(45deg);
    -o-transform: translateY(15px) rotateZ(45deg);
    transform: translateY(15px) rotateZ(45deg);
}

.button.active .bottom {
    bottom: 10px;
    -webkit-transform: translateY(-15px) rotateZ(-45deg);
    -moz-transform: translateY(-15px) rotateZ(-45deg);
    -ms-transform: translateY(-15px) rotateZ(-45deg);
    -o-transform: translateY(-15px) rotateZ(-45deg);
    transform: translateY(-15px) rotateZ(-45deg);
}

.button.active .middle {
    width: 38px;
    left: 7px;
    bottom: 1px;
    -webkit-transform: rotateZ(-180deg);
    -moz-transform: rotateZ(-180deg);
    -ms-transform: rotateZ(-180deg);
    -o-transform: rotateZ(-180deg);
    transform: rotateZ(-180deg);
}


.sidebar-list {
    padding: 0;
    margin: 0;
    list-style: none;
    position: relative;
    margin-top: 15%;
    text-align: center;
}

.sidebar-item {
    margin: 30px 0;
    opacity: 0;
    -webkit-transform: translateY(-20px);
    -moz-transform: translateY(-20px);
    -ms-transform: translateY(-20px);
    -o-transform: translateY(-20px);
    transform: translateY(-20px);
}

.sidebar-item:first-child {
    -webkit-transition: all .7s .2s ease-in-out;
    -moz-transition: all .7s .2s ease-in-out;
    -ms-transition: all .7s .2s ease-in-out;
    -o-transition: all .7s .2s ease-in-out;
    transition: all .7s .2s ease-in-out;
}

.sidebar-item.active {
    opacity: 1;
    -webkit-transform: translateY(0px);
    -moz-transform: translateY(0px);
    -ms-transform: translateY(0px);
    -o-transform: translateY(0px);
    transform: translateY(0px);
}

.sidebarContainer {
    background-color: rgba(163, 155, 162, 0.3);
    padding: 3% 1%;
    border-radius: 10px;
}

.sidebarText {
    color: rgb(255, 255, 255);
    text-decoration: none;
    font-size: 3rem;
    text-transform: none;
    position: relative;
    padding: 10px 20px;
    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
        0px 8px 13px rgba(0, 0, 0, 0.1),
        0px 18px 23px rgba(0, 0, 0, 0.1);
}

.sidebarText h1 {
    font-size: 6rem;
}

.sidebar-anchor {
    color: rgb(255, 255, 255);
    text-decoration: none;
    text-transform: uppercase;
    font-size: 3rem;
    font-weight: 700;
    text-transform: uppercase;
    position: relative;
    padding-bottom: 7px;
    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
        0px 8px 13px rgba(0, 0, 0, 0.1),
        0px 18px 23px rgba(0, 0, 0, 0.1);
}

.sidebar-anchor:hover {
    color: rgb(250, 208, 48);
}

.link {
    position: relative;
    z-index: 1;
    display: inline-flex;
    padding-left: 10px;
    padding-bottom: 5px;
    padding-right: 10px;
}
/* ... */

